--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [workspace]
 resolver = "2"
 members = [
-    "cli"
+    "cli",
+    "grain",
 ]
 
 [workspace.dependencies]
 anyhow = "1.0.98"
+grain = { path = "grain", version = "0.1.0" }
 tracing = "0.1.41"
 tracing-appender = "0.2.3"
 tracing-subscriber = "0.3.20"
