--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ members = [
 [workspace.dependencies]
 anyhow = "1.0.98"
 grain = { path = "grain", version = "0.1.0" }
+thiserror = "2.0.16"
 tracing = "0.1.41"
 tracing-appender = "0.2.3"
 tracing-subscriber = "0.3.20"
-
