--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,10 @@ grain_core = { path = "grain_core", version = "0.1.0" }
 grain_macros = { path = "macros", version = "0.1.0" }
 grain_parser = { path = "parser", version = "0.1.0" }
 parking_lot = "0.12.4"
+serde = "1.0"
+serde_json = "1.0"
+strum = { version = "0.26", features = ["derive"] }
+strum_macros = "0.26"
 thiserror = "2.0.16"
 tracing = "0.1.41"
 tracing-appender = "0.2.3"
