--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "grain_macros"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [lib]
 proc-macro = true
 
 [dependencies]
 quote = "1.0.38"
+proc-macro2 = "1.0.93"
 syn = { version = "2.0.96", features = ["full", "clone-impls"] }
