--- a/grain_core/Cargo.toml
+++ b/grain_core/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 arc-swap = "1.7"
 bytemuck = "1.23.1"
 crossbeam-skiplist = "0.1.3"
+either = { workspace = true }
 grain_macros = { workspace = true }
 grain_parser = { workspace = true }
 intrusive-collections = "0.9.7"
@@ -20,3 +21,4 @@ strum_macros = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 twox-hash = "2.1.1"
+uncased = "0.9.10"
